# voiccce

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
agent_voice/: __init__.py  audio_input.py  cli.py  config.py  daemon.py  db.py  heartbeat.py  launchagent.py  menubar.py  models.py  queue.py  runtime.py  secrets.py  service.py  session_state.py  tts_cost.py  ui.py  usage.py
agent_voice/delivery/: __init__.py  router.py
agent_voice/hooks/: __init__.py  claude_event_collector.py  codex_event_collector.py  pi_event_collector.py  text_extract.py  transcript.py
agent_voice/installer/: __init__.py  claude_code.py  codex.py  pi.py
agent_voice/intelligence/: __init__.py  fallback.py  pipeline_log.py  summarizer.py
tests/: test_audio_input.py  test_claude_collector.py  test_claude_event_collector.py  test_claude_installer.py  test_cli.py  test_codex_collector.py  test_codex_installer.py  test_config.py  test_daemon.py  test_db.py  test_delivery.py  test_fallback.py  test_launchagent.py  test_menubar.py  test_pi.py  test_pipeline_log.py  test_queue.py  test_runtime.py  test_secrets.py  test_service.py  test_session_state.py  test_summarizer.py  test_text_extract.py  test_transcript.py  test_tts_cost.py  test_ui.py  test_usage.py
